// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navigation Component > renders correctly when journal link is active 1`] = `
<div>
  <div
    class="mb-12 mt-5 flex flex-col xl:mb-0 xl:mt-0 xl:flex-row"
  >
    <a
      class="mb-5 mr-12 text-2xl font-bold xl:mb-0 xl:text-base"
      href="/journal"
    >
      <span
        class="text-stone-300"
      >
        Journal
      </span>
    </a>
    <a
      class="mb-5 mr-12 text-lg xl:mb-0 xl:text-base"
      href="/statistics"
    >
      <span
        class="text-stone-300"
      >
        Statistics
      </span>
    </a>
    <a
      class="mb-5 mr-12 text-lg xl:mb-0 xl:text-base"
      href="/about-me"
    >
      <span
        class="text-stone-300"
      >
        navigation.aboutMe
      </span>
    </a>
  </div>
</div>
`;

exports[`Navigation Component > renders correctly when no link is active 1`] = `
<div>
  <div
    class="mb-12 mt-5 flex flex-col xl:mb-0 xl:mt-0 xl:flex-row"
  >
    <a
      class="mb-5 mr-12 text-lg xl:mb-0 xl:text-base"
      href="/journal"
    >
      <span
        class="text-stone-300"
      >
        Journal
      </span>
    </a>
    <a
      class="mb-5 mr-12 text-lg xl:mb-0 xl:text-base"
      href="/statistics"
    >
      <span
        class="text-stone-300"
      >
        Statistics
      </span>
    </a>
    <a
      class="mb-5 mr-12 text-lg xl:mb-0 xl:text-base"
      href="/about-me"
    >
      <span
        class="text-stone-300"
      >
        navigation.aboutMe
      </span>
    </a>
  </div>
</div>
`;

exports[`Navigation Component > renders correctly when statistics link is active 1`] = `
<div>
  <div
    class="mb-12 mt-5 flex flex-col xl:mb-0 xl:mt-0 xl:flex-row"
  >
    <a
      class="mb-5 mr-12 text-lg xl:mb-0 xl:text-base"
      href="/journal"
    >
      <span
        class="text-stone-300"
      >
        Journal
      </span>
    </a>
    <a
      class="mb-5 mr-12 text-2xl font-bold xl:mb-0 xl:text-base"
      href="/statistics"
    >
      <span
        class="text-stone-300"
      >
        Statistics
      </span>
    </a>
    <a
      class="mb-5 mr-12 text-lg xl:mb-0 xl:text-base"
      href="/about-me"
    >
      <span
        class="text-stone-300"
      >
        navigation.aboutMe
      </span>
    </a>
  </div>
</div>
`;
